--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,47 @@
+/* ubuntu-300 - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../fonts/ubuntu-v21-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* ubuntu-regular - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/ubuntu-v21-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* ubuntu-500 - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../fonts/ubuntu-v21-latin-500.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* ubuntu-500italic - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Ubuntu';
+    font-style: italic;
+    font-weight: 500;
+    src: url('../fonts/ubuntu-v21-latin-500italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+/* ubuntu-700 - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Ubuntu';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/ubuntu-v21-latin-700.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+}
+
+/* fonts */
+
+
 /* color */
 :root {
     --c-whyte: hsl(0, 0%, 100%);
@@ -44,6 +88,10 @@
     margin: 0;
 }
 
+body {
+    font-family: "Ubuntu", "Arial", sans-serif;
+}
+
 a {
     text-decoration: none;
 }
@@ -55,20 +103,25 @@ svg {
     display: block;
 }
 
-
-
-.container {
-    padding-inline: 20%;
+.wrapper {
+    width: min(calc(100% - 16px), 1200 / 16 * 1rem);
+    margin-inline: auto;
 }
 
-header {
-    height: 70px;
-    text-align: center;
-}
 
-.start-record {
-    padding: 10px;
-}
+
+/*.container {*/
+/*    padding-inline: 20%;*/
+/*}*/
+
+/*header {*/
+/*    height: 70px;*/
+/*    text-align: center;*/
+/*}*/
+
+/*.start-record {*/
+/*    padding: 10px;*/
+/*}*/
 
 
 /*.main-controls {*/
